--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="resume-container">
 
     <header class="personal-header">
-      <img src="img/helen.png" alt="Foto de perfil de Helen" class="profile-pic">
+      <img src="img/Helen.png" alt="Foto de perfil de Helen" class="profile-pic">
       <div class="personal-info">
         <h1>Helen Torres</h1>
         <p>Correo electrónico:  helentorres234@gmail.com</p>
